# telegram-twitter-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.pi/extensions/: btw.ts  plan.ts
.pi/extensions/lib/: preferred-model.ts  project-side-question.ts
docs/: 01_sentiment_emotion_over_time.md  02_topic_modeling_landscape.md  03_word_frequency_tfidf_shifts.md  04_named_entity_networks.md  05_messaging_cadence_heatmaps.md  06_framing_rhetoric_analysis.md  07_reply_threading_analysis.md  08_bigram_trigram_networks.md  09_media_vs_text_comparison.md  all-channels-analysis.md  behold-israel-channel-analysis.md  israel-news-channels-analysis.md  presstv-channel-analysis.md
docs/assets/all-channels/: entity_network.html  entity_top_entities.html  phrase_bigram_bar.html  phrase_network.html  rhetoric_over_time.html  rhetoric_transition.html  topic_prevalence.html  topic_scatter.html  topic_time.html
docs/assets/presstv-analysis/: entity_network.html  entity_top_entities.html  phrase_bigram_bar.html  phrase_network.html  topic_prevalence.html  topic_scatter.html  topic_time.html
docs/superpowers/plans/: 2026-04-10-viz-web-frontend-redesign.md  2026-04-11-heatmap-zoom-interaction.md  2026-04-12-node-heat-generalization.md  2026-04-16-behold-israel-pipeline-notebook.md
docs/superpowers/specs/: 2026-04-10-frontend-redesign-design.md  (+3 more)
notebooks/: kg_pipeline.ipynb  messages.csv  pipeline.ipynb  pipeline_behold_israel.ipynb  presstv.ipynb
src/telegram_scraper/: __init__.py  chat_discovery.py  cli.py  config.py  main.py  markdown_writer.py  models.py  notebook_pipeline.py  state_store.py  sync_service.py  telegram_client.py  utils.py
tests/: test_cadence_analysis.py  test_chat_discovery.py  test_cli.py  test_config.py  test_framing_analysis.py  test_markdown_writer.py  test_notebook_pipeline.py  test_phrase_network_analysis.py  test_pipeline_notebook.py  test_sync_service.py
tests/kg/: test_extraction.py  test_heat_phase.py  test_kg_config.py  test_node_heat_view_postgres.py  test_node_resolver.py  test_repository.py  test_repository_messages.py  test_repository_schema.py  test_segmentation.py  test_services.py  test_translation.py  test_vector_store.py
tests/viz_api/: test_api.py  test_queries.py
viz-web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
viz-web/src/: App.tsx  main.tsx
(+203 files in other folders)
