[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-account-scraper"
version = "0.1.0"
description = "Export Telegram account chats to Markdown files."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "telethon>=1.40,<2",
  "typer>=0.12,<1",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
telegram-scraper = "telegram_scraper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
