[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-account-scraper"
version = "0.1.0"
description = "Export Telegram account chats to Markdown files and explore them from a notebook-only pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "nest-asyncio>=1.6,<2",
  "openai>=1.78,<2",
  "pandas>=2,<3",
  "telethon>=1.40,<2",
  "typer>=0.12,<1",
]

[dependency-groups]
dev = [
  "hdbscan>=0.8,<1",
  "ipykernel>=6,<7",
  "jupyterlab>=4,<5",
  "matplotlib>=3.8,<4",
  "nbformat>=5,<6",
  "networkx>=3.2,<4",
  "nltk>=3.9,<4",
  "plotly>=6,<7",
  "pytest>=8,<9",
  "python-louvain>=0.16,<1",
  "scikit-learn>=1.5,<2",
  "seaborn>=0.13,<1",
  "spacy>=3.8,<4",
  "torch>=2.8,<3",
  "transformers>=4.57,<5",
  "umap-learn>=0.5,<1",
  "wordcloud>=1.9,<2",
]

[project.scripts]
telegram-scraper = "telegram_scraper.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
